* commit 62c3592381ef693a96f39c73d9b3de179a074fce
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Mar 29 20:56:02 2014 -0400
| 
|     Added ability to do mixed composition agglomerates.
|  
* commit 2178239186496d2278e749096ab1f15d963e81a6
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Mar 29 14:15:03 2014 -0400
| 
|     Fixed errors in configure.ac (was checking for new_line wrong), added check for random_number(), tested dist on metis.
|  
* commit af607588a85befd123fd334b9c73a0ae1dacce6d
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Mar 29 13:55:24 2014 -0400
| 
|     Fixed errors in principal axis rotation, updated documentation to reflect changes and included figures
|  
* commit 739329da30fe9d2478d69e5e00f421d2ac588b67
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 18:45:47 2014 -0400
| 
|     Added ability to do orientational averages about a principal axis by specifying a new argument '--rotation-axis=xaxis,yaxis,zaxis,none'. Brandon suggested that this might end up being useful for doing grain alignment. I also fixed the configure script, so that it should actually listen to FCFLAGS=... I updated the documentation to reflect the new input option.
|  
* commit e19fa0e482d39e5c4452c8607dc13f97f3df69a5
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 12:10:32 2014 -0400
| 
|     Divided write(0,*) grain_a into grain-axis-x,y,z because printing the array in the header bleeds into the next line, which is not commented out.
|  
* commit f5505a543e864dec66acdd5591a01046a2beca11
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 12:04:14 2014 -0400
| 
|     Added trim(adjustl()) to strings in the print_parameters function to reduce whitespace
|  
* commit 192e6154892a8dc5eed4ce85babeb607414bcdfd
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 11:53:55 2014 -0400
| 
|     Ooops, forgot to make changes to the Makefile.am in the last commit.
|  