@@ -3,4 +3,5 @@ data_dev/*
 *mod
 *o
 *a
+*npy
 src/ggadt
