@@ -3,6 +3,7 @@ rm -f aclocal.m4
 rm -r -f autom4te.cache/
 rm  -f *o
 rm  -f *mod
+rm -f *npy
 rm -f config.status
 rm  -f config.log
 #rm  -f configure
