@@ -164,11 +164,11 @@ standard output and then exit successfully.
      <dl>
 <dt><samp><span class="option">--cluster-file-name=</span><var>value</var></samp><dd><a name="index-g_t_002d_002dcluster_002dfile_002dname-37"></a>Path to a correctly formatted cluster file. Several cluster files are included with the distribution (see <samp><span class="file">data/clusters</span></samp>), and if you wish to create your own, you must mimic exactly the format of these files.
 
-     <br><dt><samp><span class="option">--material-file1=</span><var>value</var><span class="option">, --material-file2=</span><var>value</var><span class="option">, ...</span></samp><dd><a name="index-g_t_002d_002dmaterial_002dfile1_002c-_002d_002dmaterial_002dfile2_002c-_0040dots_007b_007d-38"></a>For agglomerate grain geometries of mixed composition, <code>--material-file1,2,3</code> gives the path to the index file for material 1, 2, 3, etc.
+     <br><dt><samp><span class="option">--material-file1=</span><var>value</var><span class="option">, --material-file2=</span><var>value</var><span class="option">, ...</span></samp><dd><a name="index-g_t_002d_002dmaterial_002dfile1_002c-_002d_002dmaterial_002dfile2_002c-_0040dots_007b_007d-38"></a>Path(s) to the index file for material 1, 2, 3, etc.
 
-     <br><dt><samp><span class="option">--material-tag1=</span><var>value</var><span class="option">, --material-tag2=</span><var>value</var><span class="option">, ...</span></samp><dd><a name="index-g_t_002d_002dmaterial_002dtag1_002c-_002d_002dmaterial_002dtag2_002c-_0040dots_007b_007d-39"></a>For agglomerate grain geometries of mixed composition, <code>--material-tag1,2,3</code> provides the name by which material 1, 2, 3, etc. are referred to in the agglomerate composition file.
+     <br><dt><samp><span class="option">--material-tag1=</span><var>value</var><span class="option">, --material-tag2=</span><var>value</var><span class="option">, ...</span></samp><dd><a name="index-g_t_002d_002dmaterial_002dtag1_002c-_002d_002dmaterial_002dtag2_002c-_0040dots_007b_007d-39"></a>The name(s) by which material 1, 2, 3, etc. are referred to in the agglomerate composition file.
 
-     <br><dt><samp><span class="option">--agglom-composition-file=</span><var>value</var></samp><dd><a name="index-g_t_002d_002dagglom_002dcomposition_002dfile-40"></a>For agglomerate grain geometries of mixed composition, <code>--agglom-composition-file</code> provides the path to a text file that lists the spherical agglomerates and a material 'tag' which is associated with an index file.
+     <br><dt><samp><span class="option">--agglom-composition-file=</span><var>value</var></samp><dd><a name="index-g_t_002d_002dagglom_002dcomposition_002dfile-40"></a>Provides the path to a text file that lists the spherical agglomerates and a material 'tag' which is associated with an index file.
 
      <p>The agglomerate composition file is assumed to be formatted with one header line, followed by as many lines as there are agglomerates in the grain, with each line containing the index of an agglomerate and a material 'tag'.
 
