@@ -1,3 +1,9 @@
+* commit 3a8a72dedee10f55ae016c905f729fc5dd787fae
+| Author: John Hoffman <jah5@princeton.edu>
+| Date:   Sat Mar 29 23:08:13 2014 -0400
+| 
+|     Added documentation for mixed grain compositions, organized table of input parameters, still need to add figures and additional examples.
+|  
 * commit 62c3592381ef693a96f39c73d9b3de179a074fce
 | Author: John Hoffman <jah5@princeton.edu>
 | Date:   Sat Mar 29 20:56:02 2014 -0400
